<resources>
    <string name="app_name">Knowledge Is Power</string>
    <string name="str_getStarted">Get Started</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_welcome">Welcome!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="str_hello">Hello</string>
    <string name="abc124">abc124</string>
    <string name="str_proceed">Proceed</string>
    <string name="str_next">Next</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="full_name">Full Name</string>
    <string name="how_can_we_contact_you">How can we contact you?</string>
    <string name="contact_number">Contact Number</string>
    <string name="signup">Sign Up</string>
    <string name="tagline">Group Sharing App to Plot the Map</string>
    <string name="oneliner">Create groups and pin point locations together, add comments, photos and share your knowledge.</string>
    <string name="map_key">AIzaSyBnNjLt6C2L91-lClqEgA3PGvWuVQlqtaw</string>
    <string name="str_groupMembers">Group Members</string>
    <string name="member_since_14_june_2021">Member Since: 14 June, 2021</string>
    <string name="srt_addNewMember">Add New Member</string>
    <string name="search_a_delivery_location">Search a Delivery Location</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="back">Back</string>
    <string name="invitationDesc">Share this code with the people whom you want to include in your Group:</string>
    <string name="the_invitation_code_will_be_expired_in_3_days">The invitation code will be expired in 3 days</string>
    <string name="sendInvite">Send Invite</string>
    <string name="set_a_name_for_your_new_group">Set a name for your new Group</string>
    <string name="createGroup">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="you_can_post_your_comments_or_pictures_within_a_group_your_comments_will_be_visible_to_all_group_members">You can post your comments or pictures within a group. Your comments will be visible to all group members.</string>
    <string name="create_or_join_a_group">Create or Join a Group</string>
    <string name="tapToAddComent">Tap anywhere on the map to add your comment</string>
    <string name="str_enterValidEmail">Please enter a valid email address</string>
    <string name="str_enterValidPassword">Please set a strong password</string>
    <string name="str_enterValidName">Please enter a your full name</string>
    <string name="str_enterValidContactNumber">Your contact number is either empty or invalid.</string>
    <string name="str_setProfilePicture">Please set a profile picture to proceed.</string>
    <string name="password">Password</string>
    <string name="ok">ok</string>
    <string name="error">Error</string>
    <string name="enterValidContactNumber">Please enter valid contact number</string>
    <string name="type_your_comment">Type your comment..</string>
    <string name="log_out">Logout</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="leave_this_group">Leave This Group</string>
    <string name="leaveGroupDesc">Are you sure you want to leave this group?</string>
    <string name="cannotLeaveGrp">You cannot leave the group as admin, please make another user admin before leaving the group</string>
    <string name="admin">Admin</string>
    <string name="update">Update</string>
    <string name="edit_message">Edit Message</string>
    <string name="srt_addCategories">Add Categories</string>
    <string name="categoryName">Add new category here</string>
    <string name="categories">Categories</string>
    <string name="pickColor">Pick a Color for this Category</string>
    <string name="select_a_category_for_this_pin">Select a Category for this Pin</string>
</resources>