<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.InvitationActivity">

        <include
            android:id="@+id/headerLayout"
            layout="@layout/layout_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/create_or_join_a_group"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/headerLayout" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:justificationMode="inter_word"
            android:gravity="center"
            android:text="@string/you_can_post_your_comments_or_pictures_within_a_group_your_comments_will_be_visible_to_all_group_members"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/tvDesc"
            app:layout_constraintStart_toStartOf="@id/tvDesc"
            app:layout_constraintTop_toBottomOf="@id/tvDesc" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_marginTop="@dimen/_50sdp"
            app:lottie_rawRes="@raw/comments"
            app:lottie_repeatMode="reverse" />

        <TextView
            android:id="@+id/btnJoinGroup"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/roundbutton"
            android:backgroundTint="@color/primaryColorDark"
            android:gravity="center"
            android:text="@string/join_group"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnCreateGroup"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnCreateGroup"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/roundbutton"
            android:backgroundTint="@color/primaryColorDark"
            android:gravity="center"
            android:text="@string/createGroup"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnJoinGroup"
            app:layout_constraintTop_toTopOf="@+id/btnJoinGroup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>