<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.InvitationActivity">

        <include
            android:id="@+id/headerLayout"
            layout="@layout/layout_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/invitationDesc"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/headerLayout" />

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="ABC-123"
            android:textColor="@color/primaryColorDark"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tvDesc"
            app:layout_constraintStart_toStartOf="@id/tvDesc"
            app:layout_constraintTop_toBottomOf="@id/tvDesc" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/the_invitation_code_will_be_expired_in_3_days"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/tvDesc"
            app:layout_constraintStart_toStartOf="@id/tvDesc"
            app:layout_constraintTop_toBottomOf="@id/tvCode" />

        <TextView
            android:id="@+id/btnSendCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/roundbutton"
            android:backgroundTint="@color/primaryColorDark"
            android:gravity="center"
            android:text="@string/sendInvite"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>