<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColorDark">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/falling_sky"
            android:text="@string/how_can_we_contact_you"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/tvName">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_contentColor="@color/formColor"
                app:ccp_showNameCode="false"
                app:layout_constraintBottom_toBottomOf="@+id/edContactNumber"
                app:layout_constraintEnd_toStartOf="@id/edContactNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edContactNumber" />

            <EditText
                android:id="@+id/edContactNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@null"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/contact_number"
                android:inputType="phone"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/formColor"
                android:textColorHint="@color/formColor"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ccp"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/roundbutton"
            android:backgroundTint="@color/secondaryColor"
            android:gravity="center"
            android:text="@string/str_next"
            android:textAlignment="center"
            android:textColor="@color/primaryColorDark"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>